--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta property="og:image" content=”%PUBLIC_URL%/nasa.png” />
+    <meta property="og:image"
+    content=”/Users/aa/Desktop/AA/NASA/src/images/apod.png” />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/nasa.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
