Update Author Information

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,7 @@
       property="og:image"
       content="//embedr.flickr.com/assets/client-code.js"
     />
-    <meta name="description" property="og:description" content="" />
-    <meta name="author" content="_" />
+    <meta name="author" content="Ahmed Abdelaal" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>NASA - APOD</title>
