--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta
       name="image"
       property="og:image"
-      content="//embedr.flickr.com/assets/client-code.js"
+      content="https://live.staticflickr.com/65535/50874948558_546aaebd9d_k.jpg"
     />
     <meta name="author" content="Ahmed Abdelaal" />
 
